<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_explore"
        android:checkableBehavior="single">

        <item android:id="@+id/drawer_popular"
            android:title="@string/drawer_popular"
            android:icon="@drawable/drawer_popular"/>

        <item android:id="@+id/drawer_rated"
            android:title="@string/drawer_rated"
            android:icon="@drawable/drawer_rated"/>

        <item android:id="@+id/drawer_upcoming"
            android:title="@string/drawer_upcoming"
            android:icon="@drawable/drawer_upcoming"/>

        <item android:id="@+id/drawer_playing"
            android:title="@string/drawer_playing"
            android:icon="@drawable/drawer_playing"/>

    </group>

    <group android:id="@+id/group_movies"
        android:checkableBehavior="single">

        <item android:id="@+id/drawer_watched"
            android:title="@string/drawer_watched"
            android:icon="@drawable/drawer_watched"/>

        <item android:id="@+id/drawer_to_see"
            android:title="@string/drawer_to_see"
            android:icon="@drawable/drawer_to_see"/>

    </group>

    <group android:id="@+id/group_about"
        android:checkableBehavior="none">

        <item android:id="@+id/drawer_about"
            android:title="@string/drawer_about"
            android:icon="@drawable/drawer_about"/>

    </group>

</menu>